--- a/Extended model/testing the odin model.Rmd
+++ b/Extended model/testing the odin model.Rmd
@@ -245,7 +245,8 @@ incidence_data_season <- data %>% select (age_grp, age_days, infection, season_b
 incidence_data_season_wide <- incidence_data_season %>% select (!c(age_mid, age_grp)) %>%
   pivot_wider(
     names_from = season_birth,
-    values_from = c(N , n_infection, prop_seroconv, cum_infection, incidence)
+    values_from = c(N , n_infection, prop_seroconv, cum_infection, incidence),
+    values_fill = 0
   )
 
 # Put it in the right format?
@@ -761,7 +762,7 @@ rownames(seroconversion_df) <- NULL
 # Save files
 path <- "/Users/juliamayer/Library/CloudStorage/OneDrive-Charité-UniversitätsmedizinBerlin/LSTHM project/Extension/CSV files/2 M odin/mcstate/"
 
-write.csv(summary_hpd, paste0(path, "highest probability distribution, pi and mu.csv"), row.names = F)
-write.csv(seroconversion_df, paste0(path, "seroconversion by age, pi and mu.csv"), row.names = F)
+write.csv(summary_hpd, paste0(path, "highest probability distribution, seasonal fit and mu.csv"), row.names = F)
+write.csv(seroconversion_df, paste0(path, "seroconversion by age, seasonal fit and mu.csv"), row.names = F)
 ```
 
